--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <div class="container" id="container"></div>
+    <button id="dimensionsButton">Dimensions</button>
+    <div class="imageBackground">
+      <div class="container" id="container"></div>
+    </div>
     <script src="./main.js"></script>
   </body>
 </html>
