--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <button id="dimensionsButton">Dimensions</button>
-    <div class="imageBackground">
+    <div class="setupContainer">
+      <button id="dimensionsButton">Size</button>
+      <button id="rainbowButton">Rainbow</button>
+      <button id="resetButton">
+        <span>Clear</span>
+      </button>
+    </div>
+    <div class="contentContainer">
       <div class="container" id="container"></div>
     </div>
     <script src="./main.js"></script>
